change string conversion function for windows linux compatibility

--- a/BioImageLib/CMakeLists.txt
+++ b/BioImageLib/CMakeLists.txt
@@ -48,7 +48,7 @@ option(bl_BUILD_TESTS "Build Tests" OFF)
 add_subdirectory( src )
 if(bl_BUILD_TOOLS)
   add_subdirectory( tools )
-endif(bl_BUILD_EXAMPLES)
+endif(bl_BUILD_TOOLS)
 if(bl_BUILD_TESTS)
   add_subdirectory( tests )
 endif(bl_BUILD_TESTS)
