--- a/BioImageLib/tools/blMpp/CMakeLists.txt
+++ b/BioImageLib/tools/blMpp/CMakeLists.txt
@@ -36,3 +36,12 @@ SET(NAME blMppCmd)
 SET(FILE ${SRC_FILES} cmd.cpp )
 add_executable( ${NAME} ${FILE} )
 target_link_libraries(${NAME} blMpp blTxtIO blCastStacks ${ITK_LIBRARIES} blCore)
+
+## #################################################################
+## Exe generation
+## #################################################################
+SET(NAME blMppCircleMain)
+SET(FILE ${SRC_FILES} blMppCircleMain.cpp )
+add_executable( ${NAME} ${FILE} )
+target_link_libraries(${NAME} blMpp blTxtIO blCastStacks ${ITK_LIBRARIES} blCore)
+
